--- a/index.css
+++ b/index.css
@@ -1,9 +1,46 @@
-body, html{
-  height: 100%;
-  width: 100%;
-  margin: 0;
+body, html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
 }
 
 body {
-  background-color: #ffd;
+    background-color: #ffd;
+    position: relative;
+    display: flex;
+}
+
+.url-container {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    width: 650px;
+    right: 0px;
+    left: 0px;
+    margin: auto;
+}
+
+.header-container {
+    position: absolute;
+    top: 0px;
+    display: flex;
+    width: 400px;
+    right: 0px;
+    left: 0px;
+    margin: auto;
+}
+
+.img {
+    flex: 1;
+}
+
+h1 {
+    flex: 1;
+    margin: 0px;
+    height: 128px;
+    line-height: 128px;
+    font-size: 35pt;
+    color: white;
+    text-shadow: 2px 2px 3px #000;
+    text-align: center;
 }
